# coreclr

./: CMakeLists.txt  README.md
Documentation/building/: unix-test-instructions.md
Documentation/coding-guidelines/: clr-code-guide.md
src/gc/: gc.cpp  gc.h  gccommon.cpp  gcee.cpp  gceesvr.cpp  gceewks.cpp  gchandletable.cpp  gchandletable.h  gchandletableimpl.h  gcimpl.h  gcinterface.h  gcpriv.h  handletable.cpp  handletable.h  handletablecore.cpp  handletablepriv.h  handletablescan.cpp  objecthandle.cpp  objecthandle.h  softwarewritewatch.cpp  softwarewritewatch.h
src/inc/: clrconfig.h  clrconfigvalues.h  configuration.h  dacvars.h  vptr_list.h
src/unwinder/: unwinder.cpp
src/utilcode/: apithreadstress.cpp  clrconfig.cpp  configuration.cpp
src/vm/: appdomain.cpp  appdomain.hpp  assembly.cpp  assemblyspec.cpp  ceemain.cpp  class.h  clrex.cpp  clrex.h  comcallablewrapper.cpp  comcallablewrapper.h  comconnectionpoints.cpp  comconnectionpoints.h  comdelegate.cpp  comdependenthandle.cpp  common.h  comsynchronizable.cpp  comthreadpool.cpp  comutilnative.cpp  custommarshalerinfo.cpp  custommarshalerinfo.h  debugdebugger.cpp  delegateinfo.h  dispatchinfo.cpp  dllimport.cpp  dllimportcallback.cpp  dllimportcallback.h  dynamicmethod.cpp  eeconfig.cpp  eedbginterface.h  eedbginterfaceimpl.cpp  eedbginterfaceimpl.h  eepolicy.cpp  encee.cpp  excep.cpp  excep.h  exceptionhandling.cpp  exceptionhandling.h  exinfo.h  exstate.cpp  (+42 more)
tests/: dir.props  runtest.sh
tests/src/Interop/ReversePInvoke/Marshalling/: CMakeLists.txt
tests/src/Loader/NativeLibs/: CMakeLists.txt
(+68 files in other folders)
